<resources>
    <string name="app_name">MyFirstAplication</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="send">SEND</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="address">Address</string>
    <string name="gsm_number">GSM</string>
    <string name="registration_button">REGISTRATION</string>

    <string name="category_prompt">ESTATE</string>
    <string name="active_ads">Active Ads</string>
    <string name="archived_ads">Archived Ads</string>
    <string name="messaged_users">Messaged Users</string>
    <string-array name="category_arrays">
        <item>ESTATE</item>
        <item>ANIMALS</item>
        <item>ELECTRONICS</item>
        <item>FASHION</item>

    </string-array>
    <string name="ownerType_prompt">PRIVATE</string>
    <string-array name="ownerType_arrays">
        <item>PRIVATE</item>
        <item>BUSINESS</item>
    </string-array>

    <string name="state_prompt">NEW</string>
    <string name="name_app">MyOlx</string>
    <string name="add_notice">Add notice</string>
    <string name="archive">Archive</string>
    <string name="active">Active</string>
    <string name="my_notice">My Notice</string>
    <string name="messages">Messages</string>
    <string name="all">All</string>
    <string name="useful_contact">Useful Contact</string>
    <string name="contact_us">Contact Us</string>
    <string name="cancel">cancel</string>

    <string-array name="state_arrays">
        <item>NEW</item>
        <item>USED</item>
    </string-array>


</resources>
