<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.ittalents.myfirstaplication.CreateAccountActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/name"
        android:textStyle="italic"
        android:fontFamily="serif"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:maxLength="15"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/address"
        android:textStyle="italic"
        android:fontFamily="serif"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:maxLength="15"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/e_mail"
        android:textStyle="italic"
        android:fontFamily="serif"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:maxLength="15"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/password"
        android:textStyle="italic"
        android:fontFamily="serif"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:maxLength="15"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.4"
        android:fontFamily="serif"
        android:text="@string/gsm_number"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edit_gsm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:maxLength="15"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/button_registration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/registration_button"
        android:background="@drawable/main_button"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/button_cancle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/cancel"
        android:background="@drawable/main_button"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
