<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.ittalents.myfirstaplication.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/picture"
        android:background="@drawable/frame_picture"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/e_mail"
            android:textSize="22sp"
            android:textStyle="italic"
            android:textColor="@color/colorDark"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textColor="@color/colorDark"
            android:background="@drawable/button1"
            android:maxLength="20"
            android:textSize="25sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/password"
            android:textSize="22sp"
            android:textStyle="italic"
            android:textColor="@color/colorDark"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textColor="@color/colorDark"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:maxLength="15"
            android:background="@drawable/button1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/button_log_in"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/main_button"
            android:textSize="22sp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/button_create_acount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/main_button"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</LinearLayout>
